# tenra-Sentinel

./: .env.example  .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: validation.yml
apps/desktopapp/: index.html  package.json  tsconfig.json  tsconfig.node.json
apps/desktopapp/src/: App.tsx  AppRoot.tsx  styles.css
apps/desktopapp/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktopapp/src-tauri/capabilities/: default.json
apps/desktopapp/src-tauri/icons/: icon.icns
apps/desktopapp/src-tauri/src/: lib.rs  main.rs
apps/desktopapp/src/components/: SentinelAssessmentPanel.tsx  SentinelSidebar.tsx
apps/mobileapp/: App.tsx  app.json  metro.config.js  package.json  tsconfig.json
apps/mobileapp/src/: mobileStyles.ts
apps/webapp/: next.config.ts  package.json  tsconfig.json
apps/webapp/app/: globals.css  layout.tsx  page.tsx
apps/webapp/app/styles/: base.css  (+4 more)
apps/webapp/components/: phone-lookup-form.tsx
docs/: DEVELOPER_GUIDE.md  HANDOFFS.md  HANDOFF_REGISTRY.md  MODULE_MANIFEST.md  REPO_MAP.md  STABILITY_CHECKLIST.md  SUITE_HANDOFF_STANDARD.md
fixtures/handoffs/: risk-brief.json
scripts/: _common.sh  bootstrap.sh  check-env.sh  check-packages.sh  dev-both.sh  dev-desktop.sh  dev-mobile.sh  dev-web.sh  doctor.sh  generate-handoff-registry.mjs  install-desktop-app.sh  maintainability.config.json  validate-handoffs.mjs  verify-all.sh  verify-derive-roundtrip.mjs  verify-desktop.sh  verify-mobile.sh  verify-web.sh
scripts/contracts/: maintainability-contracts.json
(+18 files in other folders)
