[package]
name = "sentinel_desktop"
version = "0.1.0"
description = "Sentinel desktop shell"
authors = ["JAMARQ"]
edition = "2021"

[lib]
name = "sentinel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }

[features]
default = []
