[package]
name = "sentinel_desktop"
version = "0.1.0"
description = "Sentinel by Tenra desktop shell"
authors = ["tenra"]
edition = "2021"

[lib]
name = "sentinel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }

[features]
default = []
